topic: bug fix type: minor module: [d3] cs description: fix bugs recorded by findbugs plugin