@@ -173,7 +173,7 @@ public class CoordinateTransformer extends Transformer {
                 }
                 String successString = "Success";
                 if ( errorMessages != null ) {
-                    String tmp = errorMessages.get( new Integer( i ) );
+                    String tmp = errorMessages.get( Integer.valueOf( i ) );
                     if ( tmp != null && !"".equals( tmp.trim() ) ) {
                         successString = tmp;
                     }
